Support player inventory menu clicks
